--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -131,8 +131,13 @@
 							<i class="zmdi zmdi-search"></i>
 						</div>
 
+						<% let count=0; %>
+						<% for(let i=0; i < cartProduct.length; i++) { %>
+							<% count++; %>
+						<% } %>
+
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-							data-notify="2">
+							data-notify="<%= count %>">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
@@ -146,14 +151,14 @@
 		</div>
 
 		<!-- Header Mobile -->
-		<div class="wrap-header-mobile">
+		<!-- <div class="wrap-header-mobile"> -->
 			<!-- Logo moblie -->
-			<div class="logo-mobile">
+			<!-- <div class="logo-mobile">
 				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
-			</div>
+			</div> -->
 
 			<!-- Icon header -->
-			<div class="wrap-icon-header flex-w flex-r-m m-r-15">
+			<!-- <div class="wrap-icon-header flex-w flex-r-m m-r-15">
 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
 					<i class="zmdi zmdi-search"></i>
 				</div>
@@ -167,15 +172,15 @@
 					data-notify="0">
 					<i class="zmdi zmdi-favorite-outline"></i>
 				</a>
-			</div>
+			</div> -->
 
 			<!-- Button show menu -->
-			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
+			<!-- <div class="btn-show-menu-mobile hamburger hamburger--squeeze">
 				<span class="hamburger-box">
 					<span class="hamburger-inner"></span>
 				</span>
 			</div>
-		</div>
+		</div> -->
 
 <!-- 
 		Menu Mobile
@@ -277,62 +282,38 @@
 
 			<div class="header-cart-content flex-w js-pscroll">
 				<ul class="header-cart-wrapitem w-full">
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-01.jpg" alt="IMG">
-						</div>
+					<% let totalAmout=0 %>
 
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								White Shirt Pleat
-							</a>
+					<% for(let i=0 ; i<cartProduct.length ; i++){ %>
 
-							<span class="header-cart-item-info">
-								1 x $19.00
-							</span>
-						</div>
-					</li>
+						<li class="header-cart-item flex-w flex-t m-b-12">
+							<div class="header-cart-item-img">
+								<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>"
+									alt="IMG">
+							</div>
 
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-02.jpg" alt="IMG">
-						</div>
+							<div class="header-cart-item-txt p-t-8">
+								<a href="/productDetails?productId=<%= cartProduct[i].productDetails[0]._id %>" class="header-cart-item-name m-b-18 hov-cl1 trans-04">									<%= cartProduct[i].productDetails[0].name %>
+								</a>
 
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Converse All Star
-							</a>
+								<span class="header-cart-item-info">
+									<%= cartProduct[i].productDetails[0].price %>
+								</span>
+							</div>
 
-							<span class="header-cart-item-info">
-								1 x $39.00
-							</span>
-						</div>
-					</li>
+						</li>
+						<% totalAmout +=cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity%>
+					<% } %>
 
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-03.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Nixon Porter Leather
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $17.00
-							</span>
-						</div>
-					</li>
 				</ul>
 
 				<div class="w-full">
 					<div class="header-cart-total w-full p-tb-40">
-						Total: $75.00
+						Total: $ <%= totalAmout %>
 					</div>
 
 					<div class="header-cart-buttons flex-w w-full">
-						<a href="shoping-cart.html"
+						<a href="/shoping-cart"
 							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
 							View Cart
 						</a>
@@ -358,10 +339,10 @@
 					</button>
 
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".women">
-						Women
+						Men
 					</button>
 
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".men">
+					<!-- <button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".men">
 						Men
 					</button>
 
@@ -375,7 +356,7 @@
 
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".watches">
 						Watches
-					</button>
+					</button> -->
 				</div>
 
 				<div class="flex-w flex-c-m m-tb-10">
@@ -607,9 +588,9 @@
 					<div class="block2">
 						<div class="block2-pic hov-img0">
                             <a href="/productDetails?productId=<%= products[i]._id %>"><img src="/Photos/product/<%= products[i].image[0] %>" alt="IMG-PRODUCT" style="width: 280px; height: 350px;"></a>
-                            <a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                            <!-- <a href="<%= products[i]._id %>" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
                                 Quick View
-                            </a>
+                            </a> -->
                         </div>
                         
 
