--- a/views/users/shoping-cart.ejs
+++ b/views/users/shoping-cart.ejs
@@ -55,26 +55,26 @@
 
 						<% if(user){%>
 
-                            <a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
-                                My Account
-                            </a>
+							<a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
+								My Account
+							</a>
 
-                            <a href="/logout" class="flex-c-m trans-04 p-lr-25">
-                                Logout
-                            </a>
+							<a href="/logout" class="flex-c-m trans-04 p-lr-25">
+								Logout
+							</a>
 
-                            
 
-                        <%}else{%>
-                            <a href="/login" class="flex-c-m trans-04 p-lr-25">
-                                Login
-                            </a>
-                            <a href="/register" class="flex-c-m trans-04 p-lr-25">
-                                Sign Up
-                            </a>
-                       <% } %>
 
-						
+							<%}else{%>
+								<a href="/login" class="flex-c-m trans-04 p-lr-25">
+									Login
+								</a>
+								<a href="/register" class="flex-c-m trans-04 p-lr-25">
+									Sign Up
+								</a>
+								<% } %>
+
+
 					</div>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 						<ul class="main-menu">
 							<li>
 								<a href="/">Home</a>
-								
+
 							</li>
 
 							<li>
@@ -100,7 +100,7 @@
 							</li>
 
 							<!-- <li class="label1" data-label1="hot"> -->
-								<li>
+							<li>
 								<a href="/shoping-cart">Cart</a>
 							</li>
 
@@ -123,13 +123,19 @@
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
 							<i class="zmdi zmdi-search"></i>
 						</div>
+						<% let count=0; %>
+						<% for(let i=0; i < cartProduct.length; i++) { %>
+							<% count++; %>
+						<% } %>
 
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-							data-notify="2">
+							data-notify="<%= count %>">
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
-						<a href="#" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+
+						<a href="#"
+							class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
 							data-notify="0">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
@@ -172,62 +178,40 @@
 
 			<div class="header-cart-content flex-w js-pscroll">
 				<ul class="header-cart-wrapitem w-full">
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-01.jpg" alt="IMG">
-						</div>
 
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								White Shirt Pleat
-							</a>
+					<% let totalAmout=0 %>
 
-							<span class="header-cart-item-info">
-								1 x $19.00
-							</span>
-						</div>
-					</li>
+					<% for(let i=0 ; i<cartProduct.length ; i++){ %>
 
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-02.jpg" alt="IMG">
-						</div>
+						<li class="header-cart-item flex-w flex-t m-b-12">
+							<div class="header-cart-item-img">
+								<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>"
+									alt="IMG">
+							</div>
 
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Converse All Star
-							</a>
+							<div class="header-cart-item-txt p-t-8">
+								<a href="/productDetails?productId=<%= cartProduct[i].productDetails[0]._id %>" class="header-cart-item-name m-b-18 hov-cl1 trans-04">									<%= cartProduct[i].productDetails[0].name %>
+								</a>
 
-							<span class="header-cart-item-info">
-								1 x $39.00
-							</span>
-						</div>
-					</li>
+								<span class="header-cart-item-info">
+									<%= cartProduct[i].productDetails[0].price %>
+								</span>
+							</div>
 
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="images/item-cart-03.jpg" alt="IMG">
-						</div>
+						</li>
+						<% totalAmout +=cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity%>
+					<% } %>
 
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Nixon Porter Leather
-							</a>
 
-							<span class="header-cart-item-info">
-								1 x $17.00
-							</span>
-						</div>
-					</li>
 				</ul>
 
 				<div class="w-full">
 					<div class="header-cart-total w-full p-tb-40">
-						Total: $75.00
+						Total: $ <%= totalAmout %>
 					</div>
 
 					<div class="header-cart-buttons flex-w w-full">
-						<a href="shoping-cart.html"
+						<a href="/shoping-cart"
 							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
 							View Cart
 						</a>
@@ -259,53 +243,62 @@
 
 
 	<!-- Shoping Cart -->
-	<div class="bg0 p-t-75 p-b-85" >
+	<div class="bg0 p-t-75 p-b-85">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
 					<div class="m-l-25 m-r--38 m-lr-0-xl">
 						<div class="wrap-table-shopping-cart">
 							<table class="table-shopping-cart">
-								<tr class="table_head" >
+								<tr class="table_head">
 									<th class="column-1">Product</th>
 									<th class="column-2"></th>
 									<th class="column-3">Price</th>
 									<th class="column-4">Quantity</th>
 									<th class="column-5">Total</th>
 								</tr>
-								<% let totalAmout = 0 %>
-
+								
 								<% for(let i=0 ; i<cartProduct.length ; i++){ %>
 
-								<tr class="table_row">
-									<td class="column-1">
-											<div class="how-itemcart1" onclick="deleteCartProduct('<%= cartProduct[i].productDetails[0]._id %>')">
-												<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>" alt="IMG">
+									<tr class="table_row">
+										<td class="column-1">
+											<div class="how-itemcart1"
+												onclick="deleteCartProduct('<%= cartProduct[i].productDetails[0]._id %>')">
+												<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>"
+													alt="IMG">
 											</div>
-												</td>
-												<td class="column-2"> <%= cartProduct[i].productDetails[0].name %> </td>
-												<td class="column-3">$ <%= cartProduct[i].productDetails[0].price  %> </td>
-												<td class="column-4">
-													<div class="wrap-num-product flex-w m-l-auto m-r-0">
-														<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m" onclick="decrement('<%= cartProduct[i].cartItems._id %>','<%= cartProduct[i].productDetails[0].price %>','<%= i %>')">
-															<i class="fs-16 zmdi zmdi-minus"></i>
-														</div>
+										</td>
+										<td class="column-2">
+											<%= cartProduct[i].productDetails[0].name %>
+										</td>
+										<td class="column-3">$<%= cartProduct[i].productDetails[0].price %>
+										</td>
+										<td class="column-4">
+											<div class="wrap-num-product flex-w m-l-auto m-r-0">
+												<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m"
+													onclick="decrement('<%= cartProduct[i].cartItems._id %>','<%= cartProduct[i].productDetails[0].price %>','<%= i %>')">
+													<i class="fs-16 zmdi zmdi-minus"></i>
+												</div>
 
-														<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" id="quantity<%= i %>" value="<%= cartProduct[i].cartItems.quantity %>"
-														min="1" max="5">
-												 
+												<input class="mtext-104 cl3 txt-center num-product" type="number"
+													name="num-product1" id="quantity<%= i %>"
+													value="<%= cartProduct[i].cartItems.quantity %>" min="1" max="5" readonly>
 
-														<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m" onclick="increment('<%= cartProduct[i].cartItems._id %>','<%= cartProduct[i].productDetails[0].price %>','<%= i %>')">
-															<i class="fs-16 zmdi zmdi-plus"></i>
-														</div>
-													</div>
-												</td>
-												
-												<td class="column-5" id="total<%= i %>" >$ <%= cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %></td>
-											</tr> </a>
-											<% totalAmout += cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %>
-										<% } %>
-							
+
+												<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m"
+													onclick="increment('<%= cartProduct[i].cartItems._id %>','<%= cartProduct[i].productDetails[0].price %>','<%= i %>')">
+													<i class="fs-16 zmdi zmdi-plus"></i>
+												</div>
+											</div>
+										</td>
+
+										<td class="column-5" id="total<%= i %>">$ <%=
+												cartProduct[i].productDetails[0].price *
+												cartProduct[i].cartItems.quantity %>
+										</td>
+									</tr>
+									<% } %>
+
 							</table>
 						</div>
 
@@ -342,7 +335,7 @@
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2" id="totalAmout" >
+								<span class="mtext-110 cl2" id="totalAmout">
 									$<%= totalAmout %>
 								</span>
 							</div>
@@ -404,15 +397,16 @@
 							</div>
 
 							<div class="size-209 p-t-1">
-								<span class="mtext-110 cl2" id="totalAmout" >
+								<span class="mtext-110 cl2" id="totalAmount">
 									$<%= totalAmout %>
 								</span>
 							</div>
 						</div>
 
-						<a href="/shoping-cart/selectAddress"> <button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
-							PLACE ORDER
-						</button> </a>
+						<a href="/shoping-cart/selectAddress"> <button
+								class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+								PLACE ORDER
+							</button> </a>
 					</div>
 				</div>
 			</div>
@@ -423,129 +417,134 @@
 
 	<%- include('../layouts/footer.ejs') %>
 
-	
 
-	<!-- Back to top -->
-	<div class="btn-back-to-top" id="myBtn">
-		<span class="symbol-btn-back-to-top">
-			<i class="zmdi zmdi-chevron-up"></i>
-		</span>
-	</div>
 
-	<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-	<script>
-		$(".js-select2").each(function () {
-			$(this).select2({
-				minimumResultsForSearch: 20,
-				dropdownParent: $(this).next('.dropDownSelect2')
-			});
-		})
-	</script>
-	<!--===============================================================================================-->
-	<script src="vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
-	<!--===============================================================================================-->
-	<script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-	<script>
-		$('.js-pscroll').each(function () {
-			$(this).css('position', 'relative');
-			$(this).css('overflow', 'hidden');
-			var ps = new PerfectScrollbar(this, {
-				wheelSpeed: 1,
-				scrollingThreshold: 1000,
-				wheelPropagation: false,
-			});
+		<!-- Back to top -->
+		<div class="btn-back-to-top" id="myBtn">
+			<span class="symbol-btn-back-to-top">
+				<i class="zmdi zmdi-chevron-up"></i>
+			</span>
+		</div>
 
-			$(window).on('resize', function () {
-				ps.update();
+		<!--===============================================================================================-->
+		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/animsition/js/animsition.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/bootstrap/js/popper.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/select2/select2.min.js"></script>
+		<script>
+			$(".js-select2").each(function () {
+				$(this).select2({
+					minimumResultsForSearch: 20,
+					dropdownParent: $(this).next('.dropDownSelect2')
+				});
 			})
-		});
-	</script>
-	<!--===============================================================================================-->
-	<script src="js/main.js"></script>
+		</script>
+		<!--===============================================================================================-->
+		<script src="vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+		<script>
+			$('.js-pscroll').each(function () {
+				$(this).css('position', 'relative');
+				$(this).css('overflow', 'hidden');
+				var ps = new PerfectScrollbar(this, {
+					wheelSpeed: 1,
+					scrollingThreshold: 1000,
+					wheelPropagation: false,
+				});
 
-	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-
-	<script>
-		async function increment(cartItemsId, price, index){
-			try {
-				const total = document.getElementById(`total${index}`)
-				const quantity = document.getElementById(`quantity${index}`).value
-				const totalAmout = (Number(quantity)+1)*price
-				total.innerHTML = totalAmout
-				await axios.post('/shoping-cart/increment',{ cartItemsId })
-			} catch (error) {
-				console.log(error.message);
-			}
-		}
-
-		async function decrement(cartItemsId, price, index){
-			try {
-				const total = document.getElementById(`total${index}`);
-				const quantity = document.getElementById(`quantity${index}`).value
-				if(quantity>1){
-					const totalAmout = (Number(quantity)-1)*price
-				total.innerHTML = totalAmout
-				}
-				await axios.post('/shoping-cart/decrement', { cartItemsId })
-			} catch (error) {
-				console.log(error.message);
-			}
-		}
-
-		async function deleteCartProduct(id){
-			const confirmation = await Swal.fire({
-				title: 'Are you sure?',
-				text: 'You won\'t be able to revert this!',
-				icon: 'warning',
-				showCancelButton: true,
-				confirmButtonColor: '#3085d6',
-				cancelButtonColor: '#d33',
-				confirmButtonText: 'Yes, delete it!'
+				$(window).on('resize', function () {
+					ps.update();
+				})
 			});
+		</script>
+		<!--===============================================================================================-->
+		<script src="js/main.js"></script>
 
-			if(confirmation.isConfirmed){
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+
+		<script>
+			async function increment(cartItemsId, price, index) {
 				try {
-					const response = await axios.delete("/shoping-cart/remove", { data: { id } });
-					if(response.data.success){
-						await Swal.fire({
-							icon: 'success',
-							title: 'Deleted!',
-							text: response.data.message
-						}).then(() => {
-							window.location.href = '/shoping-cart';
-						});
-					}else{
-						await Swal.fire({
-							icon: 'error',
-							title: 'Error',
-							text: response.data.message
-						});
-						window.location.href = '/address';
-					}
+					const total = document.getElementById(`total${index}`)
+					const quantity = document.getElementById(`quantity${index}`).value
+					const totalAmoutElement = document.getElementById("totalAmout")
+
+					const totalAmout = (Number(quantity) + 1) * price
+					total.textContent = `$${totalAmout}`
+					
+					totalAmoutElement.textContent = `$${totalAmout}`
+
+					await axios.post('/shoping-cart/increment', { cartItemsId })
 				} catch (error) {
 					console.log(error.message);
-					Swal.fire({
-						icon: 'error',
-						title: 'Error',
-						text: 'There was an error deleting the address'
-					});
 				}
 			}
 
-		}
+			async function decrement(cartItemsId, price, index) {
+				try {
+					const total = document.getElementById(`total${index}`);
+					const quantity = document.getElementById(`quantity${index}`).value
+					if (quantity > 1) {
+						const totalAmout = (Number(quantity) - 1) * price
+						total.textContent = `$${totalAmout}`
+					}
+					await axios.post('/shoping-cart/decrement', { cartItemsId })
+				} catch (error) {
+					console.log(error.message);
+				}
+			}
 
-	</script>
+			async function deleteCartProduct(id) {
+				const confirmation = await Swal.fire({
+					title: 'Are you sure?',
+					text: 'You won\'t be able to revert this!',
+					icon: 'warning',
+					showCancelButton: true,
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'Yes, delete it!'
+				});
+
+				if (confirmation.isConfirmed) {
+					try {
+						const response = await axios.delete("/shoping-cart/remove", { data: { id } });
+						if (response.data.success) {
+							await Swal.fire({
+								icon: 'success',
+								title: 'Deleted!',
+								text: response.data.message
+							}).then(() => {
+								window.location.href = '/shoping-cart';
+							});
+						} else {
+							await Swal.fire({
+								icon: 'error',
+								title: 'Error',
+								text: response.data.message
+							});
+							window.location.href = '/shoping-cart';
+						}
+					} catch (error) {
+						console.log(error.message);
+						Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: 'There was an error deleting the address'
+						});
+					}
+				}
+
+			}
+
+		</script>
 
 </body>
 
