--- a/views/admin/Category/editCategory.ejs
+++ b/views/admin/Category/editCategory.ejs
@@ -27,7 +27,7 @@
     <!-- partial:../../partials/_navbar.html -->
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50" src="../../admin/images/kiona-logo.png"
+        <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50" src="/kiona-high-resolution-logo-transparent.png"
             alt="logo" /></a>
         <!-- <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="../../admin/images/logo-mini.svg" alt="logo" /></a> -->
       </div>
@@ -66,89 +66,63 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
 
-          <li class="nav-item">
+          <li class="mt-4">
             <a class="nav-link" href="/admin/home">
-              <span class="menu-title">Dashboard</span>
-              <i class="mdi mdi-home menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100">Dashboard <i class="mdi mdi-home menu-icon"></i>
+              </button>
             </a>
           </li>
-
-          <li class="nav-item">
+          <li >
             <a class="nav-link" href="/admin/users">
-              <span class="menu-title">Users</span>
-              <i class="mdi mdi-contacts menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100">User <i class="mdi mdi-contacts menu-icon"></i>
+              </button>
             </a>
           </li>
-          <li class="nav-item">
+         
+          <li>
             <a class="nav-link" href="/admin/product">
-              <span class="menu-title">Products</span>
-              <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-              <i class="mdi mdi-format-list-bulleted mdi-shopping"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100">Products <i class="mdi mdi-tshirt-crew "></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="/admin/category">
-              <span class="menu-title">Category</span>
-              <i class="mdi mdi-chart-bar menu-icon"></i>
+              <button type="button" class="btn btn-gradient-dark btn-rounded w-100">Category <i class="mdi mdi-cards"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../tables/basic-table.html">
-              <span class="menu-title">Order</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+          <li>
+            <a class="nav-link" href="/admin/order">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Order <i class="mdi mdi-shopping"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false"
-              aria-controls="general-pages">
-              <span class="menu-title">Sales</span>
+          <li >
+            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
               <i class="menu-arrow"></i>
-              <i class="mdi mdi-medical-bag menu-icon"></i>
             </a>
             <div class="collapse" id="general-pages">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../samples/blank-page.html"> Blank Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/register.html"> Register </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../samples/error-500.html"> 500 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
               </ul>
             </div>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Offer</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Offer <i class="mdi mdi-percent"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Coupons</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Coupons <i class="mdi mdi-ticket"></i> </button>
             </a>
           </li>
-          <li class="nav-item">
+          <li>
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Banners</span>
-              <i class="mdi mdi-table-large menu-icon"></i>
+              <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Banner <i class="mdi mdi-clipboard-outline"></i> </button>
             </a>
-          </li>
-          <li class="nav-item sidebar-actions">
-            <span class="nav-link">
-              <div class="border-bottom">
-                <h6 class="font-weight-normal mb-3">Projects</h6>
-              </div>
-              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
-              <div class="mt-4">
-                <div class="border-bottom">
-                  <p class="text-secondary">Categories</p>
-                </div>
-                <ul class="gradient-bullet-list mt-4">
-                  <li>Free</li>
-                  <li>Pro</li>
-                </ul>
-              </div>
-            </span>
           </li>
         </ul>
       </nav>
@@ -282,10 +256,8 @@
         categoryErr.innerHTML = "";
         descriptionErr.innerHTML = "";
 
-        if (!image) {
-          imageErr.innerHTML = "Please Select an Image.";
-          isValid = false;
-        } else {
+        if (image) {
+        
           if (!/\.(jpg|jpeg|png)$/i.test(image.name)) {
             imageErr.innerHTML = "Only JPG files are allowed.";
             isValid = false;
@@ -301,7 +273,7 @@
           categoryErr.innerHTML = "Please Enter the Category Name.";
           isValid = false;
         } else {
-          const categoryRegex = /^[a-zA-Z\s]*$/;
+          const categoryRegex = /^[a-zA-Z\s-]*$/;
           if (!categoryRegex.test(category)) {
             categoryErr.innerHTML = "Please Enter a Valid Category.";
             isValid = false;
