--- a/views/users/checkout/checkout.ejs
+++ b/views/users/checkout/checkout.ejs
@@ -67,8 +67,13 @@
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
 
+			<a href="" class="stext-109 cl8 hov-cl1 trans-04">
+				Summary
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
+
             <span class="stext-109 cl4">
-				Order Summary
+				Checkout
 			</span>
 
 		</div>
@@ -84,38 +89,9 @@
 						<div class="wrap-table-shopping-cart">
 							<table class="table-shopping-cart">
 								<tr class="table_head">
-									<th class="column-1">Product</th>
-									<th class="column-2"></th>
-									<th></th>
-									<th class="column-3"></th>
-									<th class="column-4"></th>
-									<th class="column-5"></th>
+									<th style="text-align: center;" >Paymenet method</th>
 								</tr>
 
-								<% let totalAmount=0 %>
-								
-								<% for(let i=0 ; i<cartProduct.length ; i++){ %>
-
-									<tr class="table_row">
-										<td class="column-1">
-											<div class="how-itemcart1">
-												<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>"
-													alt="IMG">
-											</div>
-										</td>
-										<td >
-											<div>
-												name:<%= cartProduct[i].productDetails[0].name %>
-												Price:$<%= cartProduct[i].productDetails[0].price %>
-												Quantity:<%= cartProduct[i].cartItems.quantity %>
-												<p style="color: red;"> Total: $<%= cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %> </p>
-											</div>
-											
-
-										</td>
-									<% totalAmount +=cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity%>
-
-								<% } %>
 
 									</tr>
 
@@ -123,9 +99,16 @@
 						</div>
 
 						<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-							<div>
-								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="number"
-									name="coupon" style="text-align:center;" placeholder="Total Amount = <%= totalAmount %>">
+							<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10" onclick="COD();">
+								Cash On Delivery
+							</div>
+
+							<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
+								Online Paymenet
+							</div>
+							
+							<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
+								Wallet
 							</div>
 						</div>
 
@@ -133,7 +116,7 @@
 				</div>
 						
 
-				<div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
+				<!-- <div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
 					<div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
 						<h4 class="mtext-109 cl2 p-b-30">
 							Shipping Address
@@ -152,15 +135,7 @@
 
 							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
 								<p class="stext-111 cl6 p-t-2">
-									<%= address.name %>
-									<%= address.addressType %> / <%= address.mobile %>
-									<%= address.address %>,
-									<%= address.locality %>,
-									<%= address.city %>,
-									<p>
-										<%= address.state %> -
-										<%= address.pincode %>
-									</p>
+								
 								</p>
 
 								<div class="p-t-15">
@@ -172,7 +147,7 @@
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
 								<span class="mtext-101 cl2">
-									Total:<%= totalAmount %>
+									
 								</span>
 							</div>
 
@@ -182,12 +157,12 @@
 							</div>
 						</div>
 
-						<a href="/checkout"> <button
+						<a href=""> <button
 								class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
 								Continue
 							</button> </a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
@@ -250,6 +225,47 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQ2t8wPd4NzzBqxREyZK8XvCqaEiPTzUMHPO+sB4QQyebJgZDedQ1IKfHAj62N2F" crossorigin="anonymous"></script>
 
 
+	<script>
+	async function COD() {
+    const confirmation = await Swal.fire({
+        title: 'Confirm Payment',
+        text: "Are you sure you want to proceed with Cash On Delivery?",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, proceed!'
+    });
+
+    if (confirmation.isConfirmed) {
+        try {
+            const response = await axios.post('/checkout/cod', {});
+            if (response.data.success) {
+                await Swal.fire({
+                    icon: 'success',
+                    title: 'Confirmed!',
+                    text: response.data.message
+                });
+                window.location.href = '/checkout';
+            } else {
+                await Swal.fire({
+                    icon: 'error',
+                    title: 'Failed!',
+                    text: response.data.message || 'Unable to process the order.'
+                });
+            }
+        } catch (error) {
+            console.error('Error during the transaction:', error);
+            await Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: 'Something went wrong!'
+            });
+        }
+    }
+}
+
+	</script>
 
 </body>
 
