--- a/views/users/checkout/showAddress.ejs
+++ b/views/users/checkout/showAddress.ejs
@@ -119,7 +119,7 @@
 										<div class="card-body">
 											<h5 class="card-title">
 												<p class="card-text">
-													<input type="radio" name="addresses" value="<%= addressData.addresses[i]._id %>" onchange="selectAddress()">
+													<input type="radio" name="addresses" value="<%= addressData.addresses[i]._id %>">
 													<span style="margin-right: 15px; font-weight: bold;"> <%= addressData.addresses[i].name %> </span>
 													<span class="address-type-style" style="  border: 1px solid #ddd; padding: 2px 5px; border-radius: 4px; display: inline-block; background-color: antiquewhite; " > <%= addressData.addresses[i].addressType %> </span>
 													<span style="font-weight: bold; margin-left: 15px"> <%= addressData.addresses[i].mobile %> </span>
@@ -137,7 +137,7 @@
 											</p>
 											<p class="mt-3"></p>
 											<button type="button" class="btn btn-info" onclick="editAddress('<%= addressData.addresses[i]._id %>')">Edit</button>
-											<button type="button" class="btn btn-danger" onclick="deleteAddress('<%= addressData.addresses[i]._id %>')">Delete</button>
+											<!-- <button type="button" class="btn btn-danger" onclick="deleteAddress('<%= addressData.addresses[i]._id %>')">Delete</button> -->
 										</div>
 										<hr>
 									<% } %>
@@ -151,20 +151,20 @@
 	
 				<div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
 					<div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
-						<h4 class="mtext-109 cl2 p-b-30">
+						<!-- <h4 class="mtext-109 cl2 p-b-30">
 							Cart Totals
-						</h4>
+						</h4> -->
 						<div class="flex-w flex-t bor12 p-b-13">
 							<div class="size-208">
 								<span class="stext-110 cl2">
 									Subtotal:
 								</span>
 							</div>
-							<div class="size-209">
+							<!-- <div class="size-209">
 								<span class="mtext-110 cl2" id="totalAmount">
 									$
 								</span>
-							</div>
+							</div> -->
 						</div>
 						<div class="flex-w flex-t bor12 p-t-15 p-b-30">
 							<div class="size-208 w-full-ssm">
@@ -172,7 +172,7 @@
 									Shipping:
 								</span>
 							</div>
-							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
+							<!-- <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
 								<p class="stext-111 cl6 p-t-2">
 									There are no shipping methods available. Please double check your address, or contact us if you need any help.
 								</p>
@@ -181,7 +181,7 @@
 										Calculate Shipping
 									</span>
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
@@ -195,11 +195,9 @@
 								</span>
 							</div>
 						</div>
-						<a href="/shoping-cart/checkout_summary">
-							<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+							<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer" onclick="deliveryHere()">
 								Delivery Here
 							</button>
-						</a>
 					</div>
 				</div>
 			</div>
@@ -264,9 +262,24 @@
 
 	<script>
 
-		async function editAddress(addressId){
-			window.location.href = `/shoping-cart/selectAddress/editAddress?id=${addressId}`
+		async function editAddress(addressId) {
+			window.location.href = `/shoping-cart/selectAddress/editAddress?id=${addressId}`;
 		}
+
+		function deliveryHere() {
+			var selectedRadio = document.querySelector('input[name="addresses"]:checked');
+			if (!selectedRadio) {
+				alert("Please select an address before proceeding.");
+			} else {
+				var addressId = selectedRadio.value;
+				goToCheckout(addressId); // Call the goToCheckout function with the address ID
+			}
+		}
+
+		async function goToCheckout(addressId) {
+			window.location.href = `/shoping-cart/checkout_summary?id=${addressId}`;
+		}
+
 
 		async function deleteAddress(id) {
 			const confirmation = await Swal.fire({
